--- a/docs/asciidoc/front_matter.adoc
+++ b/docs/asciidoc/front_matter.adoc
@@ -62,7 +62,7 @@ TIP: The CURIE format used by identifiers.org/n2t.net does not percent-encode re
 
 See the documentation on https://n2t.net/e/compact_ids.html[n2t.net] and https://docs.identifiers.org/[identifiers.org] for much more information on the compact identifiers used there and details about the resolution process. You can also register new prefixes (or mirrors by adding resource providers) for free using a simple online form.  Keep in mind, while anyone can register prefixes, the identifiers.org/n2t.net sites do basic hand curation to verify new prefix and resource (provider code) requests.  See those sites for more details on their security practices.
 
-.Note: DRS Client Compact Identifier Resolution Process
+.Note: DRS Client Compact Identifier-Based URI Resolution Process
 ****
 A DRS client identifies the a DRS URI compact identifier components using the first occurance of "/" (optional) and ":" characters. These are not allowed in provider_code (optional) or the namespace. The ":" character is also not allowed in a Hostname-based DRS URI, providing a convenient mechanism to differentiate them. Once the provider_code (optional) and namespace are extracted from a DRS URI, a client can use services on identifiers.org to identify available resolvers. For example, for a Data GUID namespace of "dg" the following GET request will return information about the namespace:
 
@@ -93,11 +93,13 @@ _IDs in DRS hostname-based URIs/URLs are always percent-encoded to eliminate amb
 
 ==== Hostname-based DRS URIs
 
-Strings of the form `drs://<server>/<id>` mean _“you can fetch the content with DRS id `<id>` from the DRS server at `<server>` "_.  For example:
+Hostname-based DRS URIs are simpler than compact identifier-based URIs.  They contain the DRS server name and the DRS ID only and can be converted directly into a fetchable URL based on a simple convention.  They take the form:
 
+    drs://<hostname>/<id>
 
-
-As a further example, if a WES server was asked to process:
+.Note: DRS Client Hostname-Based URI Resolution Process
+****
+Strings of the form `drs://<hostname>/<id>` mean _“you can fetch the content with DRS id `<id>` from the DRS server at `<hostname>` "_.  For example, if a WES server was asked to process:
 
     drs://drs.example.org/314159
 
@@ -105,17 +107,18 @@ It would know that it could issue a GET request to:
 
     https://drs.example.org/ga4gh/drs/v1/objects/314159
 
-to learn how to fetch that object via one of a variety of approaches.
+to learn how to fetch that data object via one of the available access approaches.
 
-The protocol is always https and the port is always the standard 443 SSL port.  It would be invalid to include, for example, a port in the DRS URI.
+The protocol is always https and the port is always the standard 443 SSL port.  It would be invalid to include, for example, a different port in the DRS hostname-based URI.
 
-TIP: In hostname-based DRS URIs, the ID is always percent-encoded to ensure special characters do not interfere with subsequent DRS endpoint calls.  As such, ":" is not allowed in the URI and is a convenient way of differentiating from a compact identifier-based DRS URI.  Also, if a given DRS service implementation uses compact identifier accessions as their DRS IDs, they must be percent encoded before using them as IDs in hostname-based DRS URIs.  For the earlier data GUID compact identifier DRS URI example, the hostname URI equivalent might look like: `drs://dataguids.org/dg.4503%2F00e6cfa9-a183-42f6-bb44-b70347106bbe`. Notice, when treated as a DRS ID, the compact identifier accession is URI percent encoded.
+In hostname-based DRS URIs, the ID is always percent-encoded to ensure special characters do not interfere with subsequent DRS endpoint calls.  As such, ":" is not allowed in the URI and is a convenient way of differentiating from a compact identifier-based DRS URI.  Also, if a given DRS service implementation uses compact identifier accessions as their DRS IDs, they must be percent encoded before using them as IDs in hostname-based DRS URIs.  For the earlier data GUID compact identifier DRS URI example, the hostname URI equivalent might look like: `drs://dataguids.org/dg.4503%2F00e6cfa9-a183-42f6-bb44-b70347106bbe`. Notice, when treated as a DRS ID, the compact identifier accession is URI percent encoded.
+****
 
 Hostname-based DRS URIs are less resistant to future project/domain name changes than compact identifiers.  But they do provide a more explicit way of pointing to a DRS object which can have benefits.  The fact that they can be resolved using a simple rule means a DRS client can skip the extra overhead of a DRS server lookup as is done for compact identifier-based URIs.  This can translate to greater performance and also, possibly, security since it avoids the lookup of a resolver through a separate service (identifiers.org/n2t.net).
 
 .Note: Service Registry/Info and Future Versions of DRS
 ****
-In the future, as newer versions of DRS are released, the ability to look at a hostname-based DRS URI and derive a valid GET URL will not be possible.  Multiple versions of DRS on different URL paths may be supported on the same server.  We expect to add support for service-registry and service-info in future releases of DRS.  Using the hostname in the DRS URI, plus information in the https://github.com/ga4gh-discovery/ga4gh-service-registry[service-registry] standard endpoint, which lead to https://github.com/ga4gh-discovery/ga4gh-service-info[service-info] endpoints, a client will be able to discover enough information to translate a DRS hostname-based URI into a valid URL.  For now we assume a rules-based translation to `https://<drs_server_hostname>/ga4gh/drs/v1/objects/<object_id>`
+In the future, as newer versions of DRS are released, the ability to look at a hostname-based DRS URI and derive a valid GET URL will not be possible.  Multiple versions of DRS on different URL paths may be supported on the same server.  We expect to add support for https://github.com/ga4gh-discovery/ga4gh-service-registry[service-registry] and https://github.com/ga4gh-discovery/ga4gh-service-info[service-info] in future releases of DRS.  Using the hostname in the DRS URI, plus information in the service-registry standard endpoint (which lead to service-info endpoints on that server) a client will be able to discover enough information to translate a DRS hostname-based URI into a valid URL.  For now we assume a rules-based translation to `https://<hostname>/ga4gh/drs/v1/objects/<id>`
 ****
 
 === DRS Datatypes
